# rust-crud-stack

./: .env  .env.prod  Cargo.toml  Dockerfile  diesel.toml  docker-compose.yaml  docker-compose.yml
api/: Cargo.toml
api/src/: main.rs
cruddy/: lib.rs
migration_manager/: Cargo.toml
migration_manager/src/: main.rs
migrations/: 23-11-25 19:49.sql
migrations/2023-11-25-230402_create_todo_table/: up.sql
src/: main.rs  routes.rs  schema.rs
src/models/: todo.rs
src/routes/: todos.rs
src/schema/: todos.rs
